force-app/main/default/objects/Idea/fields/Business_Context__c.field-meta.xml
<CustomField>
    <fullName>Business_Context__c</fullName>
    <label>Business Context</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>