force-app/main/default/objects/Idea/fields/Idea_Stakeholder__c.field-meta.xml
<CustomField>
    <fullName>Idea_Stakeholder__c</fullName>
    <label>Idea Stakeholder</label>
    <length>100</length>
    <type>Text</type>
</CustomField>