force-app/main/default/objects/Idea/fields/Opportunity_Idea__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Idea__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Ideas</relationshipLabel>
    <relationshipName>Ideas</relationshipName>
    <type>Lookup</type>
</CustomField>