force-app/main/default/objects/Idea/fields/Status_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Status_Modified_Date__c</fullName>
    <description>Date the status was modified</description>
    <label>Status Modified Date</label>
    <type>Date</type>
</CustomField>