force-app/main/default/objects/Idea/fields/Strategic_Product_Imperatives__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Product_Imperatives__c</fullName>
    <label>Strategic Product Imperatives</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Content Competency</fullName>
            </value>
            <value>
                <fullName>Educational Outcomes Measurement</fullName>
            </value>
            <value>
                <fullName>Community Discussion</fullName>
            </value>
            <value>
                <fullName>Database and User Segmentation</fullName>
            </value>
            <value>
                <fullName>Multi-Channel Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>