force-app/main/default/objects/Idea/fields/X2nd_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>2nd Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Ideas - 2nd Related Opportunity</relationshipLabel>
    <relationshipName>Ideas1</relationshipName>
    <type>Lookup</type>
</CustomField>