force-app/main/default/objects/Idea/fields/X3rd_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>3rd Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Ideas - 3rd Related Opportunity</relationshipLabel>
    <relationshipName>Ideas2</relationshipName>
    <type>Lookup</type>
</CustomField>