force-app/main/default/objects/Idea/validationRules/Categories_Is_Required_Field.validationRule-meta.xml
<ValidationRule>
    <fullName>Categories_Is_Required_Field</fullName>
    <active>true</active>
    <description>Categories is a Required Field</description>
    <errorConditionFormula>ISNULL (Categories)</errorConditionFormula>
    <errorMessage>Please select a category.</errorMessage>
</ValidationRule>