force-app/main/default/objects/Idea/listViews/Ideas_Last_7_Days.listView-meta.xml
<ListView>
    <fullName>Ideas_Last_7_Days</fullName>
    <columns>IDEA.CREATED_DATE</columns>
    <columns>IDEA.TITLE</columns>
    <columns>IDEA.CREATED_BY_NICKNAME</columns>
    <columns>IDEA.NUM_COMMENTS</columns>
    <columns>IDEA.STATUS</columns>
    <columns>IDEA.CATEGORIES</columns>
    <columns>COMMUNITY.NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All Ideas</label>
</ListView>