force-app/main/default/objects/Idea/listViews/Last_7_Days.listView-meta.xml
<ListView>
    <fullName>Last_7_Days</fullName>
    <columns>IDEA.CREATED_DATE</columns>
    <columns>IDEA.TITLE</columns>
    <columns>IDEA.CREATED_BY_NICKNAME</columns>
    <columns>VOTE_STATS.WEIGHTED_SUM</columns>
    <columns>IDEA.NUM_COMMENTS</columns>
    <columns>IDEA.STATUS</columns>
    <columns>IDEA.CATEGORIES</columns>
    <columns>COMMUNITY.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IDEA.CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:7</value>
    </filters>
    <label>Last 7 Days</label>
</ListView>